atlantis/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: atlantis
  labels:
    argocd.argoproj.io/managed-by: argocd // namespace of managing Argo CD instance
