atlantis/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: atlantis
spec:
  serviceName: atlantis
  replicas: 1
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: atlantis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: atlantis
    spec:
      #serviceAccountName: atlantis
      #securityContext:
      #  fsGroup: 1000
      containers:
      - name: atlantis
        image: ghcr.io/runatlantis/atlantis:v0.25.0 #quay.io/cfel4321/atlantis
      volumes:
      - name: atlantis-vcs
        secret:
          secretName: atlantis-vcs
      - name: config
        configMap:
          name: atlantis-config
  volumeClaimTemplates:
  - metadata:
      name: atlantis-data
    spec:
      accessModes: ["ReadWriteOnce"] # Volume should not be shared by multiple nodes.
      resources:
        requests:
          # The biggest thing Atlantis stores is the Git repo when it checks it out.
          # It deletes the repo after the pull request is merged.
          storage: 5Gi
