atlantis/atlantis-svc-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlantis-svc-bridge
  namespace: argocd
spec:
  type: ExternalName
  externalName: atlantis.atlantis
