atlantis/ingress.yaml
# ngrok Ingress Controller Configuration
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis-ingress
spec:
  ingressClassName: ngrok
  rules:
    - host: phoenix-funky-ringtail.ngrok-free.app
      http:
        paths:
          - path: /atlantis
            pathType: Prefix
            backend:
              service:
                name: atlantis
                port:
                  number: 80
